apps/cilium-gateway/templates/private-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: private-gateway
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-letsencrypt-dns
spec:
  gatewayClassName: cilium
  listeners:
  - name: web-http
    protocol: HTTP
    port: 80
    hostname: '*.mobrockers.com'
  - name: web-https
    protocol: HTTPS
    port: 443
    hostname: '*.mobrockers.com'
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
        certificateRefs:
        - name: star-mobrockers-com-tls
  - name: ldaps
    protocol: TLS
    port: 636
    hostname: 'ldap.mobrockers.com'
    tls:
      mode: Terminate
        certificateRefs:
        - name: star-mobrockers-com-tls
    allowedRoutes:
      namespaces:
        from: Selector
      selector:
        matchLabels:
          app: authentik-ldap
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-upgrade
spec:
  parentRefs:
  - name: private-gateway
    sectionName: web-http
  hostnames:
  - '*.mobrockers.com'
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        port: 443
